--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -1,18 +1,19 @@
 
-
   
   .signin_form{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center ;
       
-    background-color: pink;
+    background-color: rgb(224, 206, 183);
     font: inherit;
     padding: 0.5rem;
     border-radius: 6px;
     border-color: black;
-    border: 3px solid #ccc;
+    border: 3px #ccc;
     width: 20rem;
     max-width: 100%;
-   
-    
     font-weight: bold;
   }
   .email_input{
