--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 @import '~antd/dist/antd.css';
+*{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .App {
   text-align: center;
 }
