--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
 *{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
 }
+body{background-color:beige;}
 
 .App {
   text-align: center;
