--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import '~antd/dist/antd.css';
-
+body{
+  background-color: whitesmoke
+}
 
 
 *{
@@ -7,7 +9,6 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     
 }
-body{background-color:beige;}
 
 .App {
   text-align: center;
