--- a/src/Components/Components_Styles/CardShowTeacher.css
+++ b/src/Components/Components_Styles/CardShowTeacher.css
@@ -15,11 +15,21 @@ table {
     box-shadow: 5px 10px #888888;
     
   }
-  .td-btn{
+  .th-btn{
     text-align: center;
     width: 150px;
    
-
+  }
+  .td-btn{
+    text-align: center;
+    width: 110px;
+    margin-top: 5px;
+    font-size: 10px;
+  }
+  .td-btn:hover{
+    margin-right: 5px;
+    color: rgb(110, 4, 4);
+    font-weight: bold;
   }
   .td-id{
       font-weight: bold;
