--- a/src/Pages/Pages_Styles/FrontScreen.css
+++ b/src/Pages/Pages_Styles/FrontScreen.css
@@ -23,7 +23,7 @@
   background-color: rgba(0,0,0, 0.2)
 }
 .nav-bar{
-  height: 85px;
+  height: 80px;
   width: 100%;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.5)
@@ -37,10 +37,11 @@
 .nav-bar ul li {
   float: left;
   margin: 5px;
+  margin-right: 15px;
 }
 .heading {
   margin: 10px 30px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bolder;
   display: inline;
   float: left;
