--- a/src/Components/Components_Styles/Margin_pages.css
+++ b/src/Components/Components_Styles/Margin_pages.css
@@ -1,10 +1,16 @@
 .margin-all{
     margin-left: 280px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-right: 15px;
     padding: 10px;
 }
 .data-img{
     height: 60px;
     width: 60px
+}
+.cards-inline{
+  
+   margin-left: 20px;
+  
+    
 }
