--- a/src/Pages/Pages_Styles/FrontScreen.css
+++ b/src/Pages/Pages_Styles/FrontScreen.css
@@ -1,5 +1,5 @@
 .head {
-  background-image: url(https://www.aud.edu/media/ps0puzin/website-latest-2.jpg);
+  background-image: url(https://r2.community.samsung.com/t5/image/serverpage/image-id/763058iA58E95820D3B3562/image-size/large?v=v2&px=999);
   background-position: center center;
   background-repeat: no-repeat;
   background-size:cover;
